made basic unlockable bundle textures; moved intro quest to Krobus events file and updated for 1.6; removed quest framework dependency; added unlockable bundles dependency; moved quest board to side on map to make room for collection basket

--- a/[Si] Lair of Shadows/[CP] Lair of Shadows/manifest.json
+++ b/[Si] Lair of Shadows/[CP] Lair of Shadows/manifest.json
@@ -8,18 +8,11 @@
 	"ContentPackFor": {
 		"UniqueID": "Pathoschild.ContentPatcher",
 	},
-	// "Dependencies": [
-
-	// 	{
-    //     		"UniqueID": "aedenthorn.ExtraMapLayers",
-    //     		"IsRequired": true
-	// 	},
-
-	// 	{
-    //     		"UniqueID": "SuperAardvark.AntiSocial",
-    //     		"IsRequired": true
-	// 	},
-
-	// ]
+	"Dependencies": [
+		{
+        		"UniqueID": "DLX.Bundles",
+        		"IsRequired": true
+		},
+	]
 
 }
