Moved all the maps back to Maps folder and added ATA dependency

--- a/[Si] Lair of Shadows/[CP] Lair of Shadows/manifest.json
+++ b/[Si] Lair of Shadows/[CP] Lair of Shadows/manifest.json
@@ -13,6 +13,10 @@
         		"UniqueID": "DLX.Bundles",
         		"IsRequired": true
 		},
+		{
+			"UniqueID": "Spiderbuttons.ArbitraryTilesheetAccess",
+			"IsRequired": true
+		},
 	]
 
 }
